# fscm

./: README.md  pyproject.toml  setup.cfg  setup.py
examples/: global_sudo.py
fscm/: __init__.py  fscm.py  remote.py  remote_cli.py  secrets.py
fscm/contrib/: __init__.py  python.py  wireguard.py
fscm/modules/: __init__.py  pki.py  systemd.py  wireguard.py
tests/: test_fscm.py
tests/integration/: conftest.py  test_nginx.py
tests/integration/dockerfiles/: arch.Dockerfile  debian.Dockerfile
