[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fscm"
description = "Finally, simple configuration management!"
requires-python = ">=3.10"
keywords = []
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'importlib-metadata; python_version<"3.10"',
    'mitogen @ git+https://git@github.com/jamesob/mitogen.git',
    'clii >= 1.0.0',
]
version = "0.0.1"

[tool.setuptools]
packages = ["fscm"]

[tool.pytest.ini_options]
python_functions = "_pytest*"
python_files = ["fscm/fscm.py", "test_*.py"]
